# atlas-chess

./: .gitignore  Cargo.toml  README.md  build.rs  foo.txt  opening_book.csv  pyproject.toml  uci-spec.txt
.cargo/: config.toml
.github/workflows/: bump.yml  maturin.yml  rust.yml  upload_to_pypi.yml
nn-training/: setup.py
nn-training/runs/run-1/: config.yaml  nn.onnx  nn.onnx.data  nn.pt
nn-training/src/: create_dataset.py  dataloader.py  evaluation.py  inference.py  nn.py
nn-training/src/UNKNOWN.egg-info/: SOURCES.txt
nn-training/src/nn_training.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nn-training/test/: test_dataloader.py  test_util.py
reinforcement-learning/: environment.yaml  nn.py  tests.py
reinforcement-learning/test_data/: random_evals_1000.csv
src/: lib.rs  main.rs
src/board/: board.md  mod.rs  test_fens.txt
src/chess_move/: chess_move.md  mod.rs
src/constants/: mod.rs
src/engine/: engine.md  mod.rs
src/liches/: mod.rs
src/lru_cache/: mod.rs
src/mcts/: mod.rs
src/move_generator/: mod.rs  move_generator.md
src/nnue/: mod.rs
src/random/: mod.rs  random.md
src/static_evaluation/: mod.rs
src/zobrist/: mod.rs
tests/: checks.txt  lichess_db_puzzle.csv  mate_in_2.csv  mate_in_3.csv  mate_in_4.csv
tests/random_games/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
