[package]
name = "atlas-chess"
version = "0.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "atlas_chess"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.3" }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

